--- a/mingw-w64-python-gcs-oauth2-boto-plugin/PKGBUILD
+++ b/mingw-w64-python-gcs-oauth2-boto-plugin/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gcs-oauth2-boto-plugin
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=3.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Auth plugin allowing use the use of OAuth 2.0 credentials for Google Cloud Storage in the Boto library. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,7 +22,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-pyopenssl"
          "${MINGW_PACKAGE_PREFIX}-python-retry-decorator"
          "${MINGW_PACKAGE_PREFIX}-python-six")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('f4120b08b7f8d32904674c98f07d4caf4083a58343c0c0fa0016e0f0254dfe31')
@@ -33,24 +34,22 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
-
-  "${MINGW_PREFIX}"/bin/python setup.py build
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
   cd "${srcdir}/python-build-${MSYSTEM}"
 
-  "${MINGW_PREFIX}"/bin/python setup.py check
+  "${MINGW_PREFIX}"/bin/python -m pytest
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    "${MINGW_PREFIX}"/bin/python setup.py install --prefix="${MINGW_PREFIX}" \
-      --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
