--- a/mingw-w64-python-funcsigs/PKGBUILD
+++ b/mingw-w64-python-funcsigs/PKGBUILD
@@ -4,42 +4,38 @@ _realname=funcsigs
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=1.0.2
-pkgrel=6
+pkgrel=7
 pkgdesc='Python function signatures from PEP362 for Python 2.6, 2.7 and 3.3+'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/testing-cabal/funcsigs'
 msys2_references=(
   'pypi: funcsigs'
 )
-url='https://github.com/testing-cabal/funcsigs'
-license=('ASL')
-makedepends=("${MINGW_PACKAGE_PREFIX}-python"
+license=('spdx:Apache-2.0')
+depends=("${MINGW_PACKAGE_PREFIX}-python")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-_dtoken="94/4a/db842e7a0545de1cdb0439bb80e6e42dfe82aaeaadd4072f2263a4fbed23"
-source=("https://pypi.python.org/packages/${_dtoken}/${_realname}-${pkgver}.tar.gz")
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('a7bb0f2cf3a3fd1ab2732cb49eba4252c2af4240442415b4abce3b87022a8f50')
 noextract=(${_realname}-${pkgver}.tar.gz)
 
 prepare() {
-  cd "${srcdir}"
-  [[ -d "${srcdir}"${_realname}-${pkgver} ]] && rm -rf "${srcdir}"/${_realname}-${pkgver}
   tar -xzf "${srcdir}"/${_realname}-${pkgver}.tar.gz -C "${srcdir}" || true
-
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r ${_realname}-${pkgver} python-build-${MSYSTEM}
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
   cd "${srcdir}"/python-build-${MSYSTEM}
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
