--- a/mingw-w64-python-glfw/PKGBUILD
+++ b/mingw-w64-python-glfw/PKGBUILD
@@ -5,7 +5,7 @@ _realname=glfw
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.8.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Module for OpenGL, OpenGL ES, Vulkan, window and input support (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -13,30 +13,28 @@ url='https://github.com/FlorianRhiem/pyGLFW'
 msys2_references=(
   'pypi: glfw'
 )
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-glfw")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools"
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${_basename}-${pkgver}.tar.gz"::"${url}/archive/v${pkgver}.tar.gz")
-sha256sums=('dc0a77c3b7988c88a50970b6241f15d278145ee734c6d592a9c4c4ce2ae18b87')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "${_basename}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('90e90d328b0b26fed6e1631d21801e2d8a7a0c5dcb480e733c177567ec9666f0')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
 }
 
