--- a/mingw-w64-python-hpack/PKGBUILD
+++ b/mingw-w64-python-hpack/PKGBUILD
@@ -4,37 +4,34 @@ _realname=hpack
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
 pkgver=4.0.0
-pkgrel=4
+pkgrel=5
 pkgdesc='HTTP/2 Header Encoding for Python (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('MIT')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/python-hyper/hpack'
 msys2_references=(
   "cpe: cpe:/a:python:hpack"
   "pypi: hpack"
 )
+license=('spdx:MIT')
 depends=(${MINGW_PACKAGE_PREFIX}-python)
-makedepends=(${MINGW_PACKAGE_PREFIX}-python-setuptools)
-source=(https://github.com/python-hyper/${_realname}/archive/v${pkgver}.tar.gz)
-sha256sums=('b714329acc1d4facaed34329584f8a6b234abb9141b640ec021f991f5108a300')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+makedepends=(${MINGW_PACKAGE_PREFIX}-python-build
+             ${MINGW_PACKAGE_PREFIX}-python-installer
+             ${MINGW_PACKAGE_PREFIX}-python-setuptools)
+source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('fc41de0c63e687ebffde81187a948221294896f6bdc0ae2312708df339430095')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
