--- a/mingw-w64-python-hyperframe/PKGBUILD
+++ b/mingw-w64-python-hyperframe/PKGBUILD
@@ -4,36 +4,33 @@ _realname=hyperframe
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
 pkgver=6.0.1
-pkgrel=4
+pkgrel=5
 pkgdesc='Pure-Python HTTP/2 framing (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('MIT')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/python-hyper/hyperframe'
 msys2_references=(
   'pypi: hyperframe'
 )
+license=('spdx:MIT')
 depends=(${MINGW_PACKAGE_PREFIX}-python)
-makedepends=(${MINGW_PACKAGE_PREFIX}-python-setuptools)
-source=(https://github.com/python-hyper/${_realname}/archive/v${pkgver}.tar.gz)
-sha256sums=('a126e1e0fb24135aa7ac53cefe11ad197d0c9a5e74f495c1236022b1e578a7a8')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+makedepends=(${MINGW_PACKAGE_PREFIX}-python-build
+             ${MINGW_PACKAGE_PREFIX}-python-installer
+             ${MINGW_PACKAGE_PREFIX}-python-setuptools)
+source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('ae510046231dc8e9ecb1a6586f63d2347bf4c8905914aa84ba585ae85f28a914')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
