--- a/mingw-w64-python-bleach/PKGBUILD
+++ b/mingw-w64-python-bleach/PKGBUILD
@@ -6,10 +6,10 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=6.2.0
 pkgrel=1
 pkgdesc="An easy whitelist-based HTML-sanitizing tool (mingw-w64)"
+arch=('any')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://bleach.readthedocs.io/"
 msys2_repository_url="https://github.com/mozilla/bleach/"
-arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: bleach'
   "cpe: cpe:/a:mozilla:bleach"
