--- a/mingw-w64-python-google-apitools/PKGBUILD
+++ b/mingw-w64-python-google-apitools/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.5.32
 pkgrel=3
 pkgdesc="client libraries for humans (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: google-apitools'
 )
