--- a/mingw-w64-python-html5lib/PKGBUILD
+++ b/mingw-w64-python-html5lib/PKGBUILD
@@ -3,62 +3,54 @@
 _realname=html5lib
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=1.1
-pkgrel=5
+pkgrel=6
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 pkgdesc="A Python HTML parser/tokenizer based on the WHATWG HTML5 spec (mingw-w64)"
 url="https://github.com/html5lib"
 msys2_references=(
   'pypi: html5lib'
   "cpe: cpe:2.3:a:html5lib:html5lib"
 )
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-six"
          "${MINGW_PACKAGE_PREFIX}-python-webencodings")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-lxml"
               "${MINGW_PACKAGE_PREFIX}-python-mock")
 _test_commit=c305da74fae50fb018870de7a042da36c1a93b65
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/html5lib/html5lib-python/archive/${pkgver}.tar.gz"
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
         "https://github.com/html5lib/html5lib-tests/archive/${_test_commit}.tar.gz")
-sha256sums=('66e9e24a53c10c27abb6be8a3cf2cf55824c6ea1cef8570a633cb223ec46e894'
+sha256sums=('b2e5b40261e20f354d198eae92afc10d750afb487ed5e50f9c4eaf07c184146f'
             'cb261423c644b3469ac66926e290060b481371d0952995d270492fc761d0209a')
 
-prepare() {  
-  cd "${srcdir}"
-  pushd "${_realname}-python-${pkgver}"
-    rm -rf html5lib/tests/testdata
-    cp -r "${srcdir}/html5lib-tests-${_test_commit}" html5lib/tests/testdata
-  popd
-
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-python-${pkgver}" "python-build-${MSYSTEM}"
+prepare() {
+  cd "${srcdir}"/"${_realname}-${pkgver}"
+  rm -rf html5lib/tests/testdata
+  cp -r "${srcdir}/html5lib-tests-${_test_commit}" html5lib/tests/testdata
 }
 
 build() {
-  msg2 "Python build for ${MSYSTEM}"  
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
-  msg2 "Python check for ${CARCH}"
   cd "${srcdir}"/python-build-${MSYSTEM}
   ${MINGW_PREFIX}/bin/py.test
-
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm755 LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE
 }
