--- a/mingw-w64-python-inflection/PKGBUILD
+++ b/mingw-w64-python-inflection/PKGBUILD
@@ -4,38 +4,34 @@ _realname=inflection
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
 pkgver=0.5.1
-pkgrel=4
+pkgrel=5
 pkgdesc='A port of Ruby on Rails inflector to Python (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('MIT')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/jpvanhal/inflection'
 msys2_references=(
   'pypi: inflection'
 )
+license=('spdx:MIT')
+depends=(${MINGW_PACKAGE_PREFIX}-python)
 makedepends=(
-    ${MINGW_PACKAGE_PREFIX}-python
+    ${MINGW_PACKAGE_PREFIX}-python-build
+    ${MINGW_PACKAGE_PREFIX}-python-installer
     ${MINGW_PACKAGE_PREFIX}-python-setuptools)
-source=("https://github.com/jpvanhal/${_realname}/archive/${pkgver}.tar.gz")
-sha256sums=('f9052041a2c7221cf2535fd9ab78915ca87ebcb9ccebfab4a2aa1ee70fc03cb2')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('1a29730d366e996aaacffb2f1f1cb9593dc38e2ddd30c91250c6dde09ea9b417')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
