--- a/mingw-w64-python-influxdb/PKGBUILD
+++ b/mingw-w64-python-influxdb/PKGBUILD
@@ -4,7 +4,7 @@ _realname=influxdb
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=5.3.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Python client for InfluxDB'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,29 +21,29 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python-requests"
   "${MINGW_PACKAGE_PREFIX}-python-six"
 )
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=(
     "${MINGW_PACKAGE_PREFIX}-python-pytest"
     "${MINGW_PACKAGE_PREFIX}-python-mock"
     "${MINGW_PACKAGE_PREFIX}-python-requests-mock"
     "${MINGW_PACKAGE_PREFIX}-python-nose"
     )
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('58c647f6043712dd86e9aee12eb4ccfbbb5415467bc9910a48aa8c74c1108970')
 
 build() {
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
-
-  "${MINGW_PREFIX}"/bin/python setup.py build
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    "${MINGW_PREFIX}"/bin/python setup.py install --prefix="${MINGW_PREFIX}" \
-      --root="${pkgdir}" --optimize=1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
