--- a/mingw-w64-python-oauth2client/PKGBUILD
+++ b/mingw-w64-python-oauth2client/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.1.3
 pkgrel=5
 pkgdesc='A client library for OAuth 2.0 (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/google/oauth2client"
 msys2_references=(
   'pypi: oauth2client'
